# quanticity_capital

./: .env.example  .gitignore  AGENTS.md  COMPREHENSIVE_DATA_VALIDATION_REPORT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  Makefile  Procfile  README.md  agents.md  alembic.ini  debug_capture.py  docker-compose.yml  document.yaml  pyproject.toml  pyrightconfig.json  quanticity-trading-architecture.md  quantum-trading-architecture.md  requirements.in  requirements.txt  setup.cfg  uw_openapi.yaml  uw_public_api.js
alembic/: AGENTS.md  env.py  script.py.mako
backups/: README.md
config/: AGENTS.md  __init__.py  alpha_vantage.yml  analytics.yml  ibkr.yml  observability.yml  runtime.json  runtime.yml  schedule.yml  settings.example.yaml  settings.yaml  symbols.yml  watchdog.yml
data/: README.md
docs/: 0.Getting Started Guide.md  1.Infrastructure & Environment.md  2.1 Interactive brokers connection.md  2.2 Account and Portfolio Overview.md  2.3 Account Summary Implementation.md  2.4 Positions Implementation.md  2.5 Profit and Loss Implementation.md  3.1 Data Storage Strategy.md  AGENTS.md  IBKR_Ingestion.md  README.md  agents.md  ai_overseer.md  alpha_vantage_endpoints.md  analytics_engine.md  api_endpoints.md  api_queries.md  cli_operations.md  data_governance.md  data_sources.md  distribution.md  environment_infrastructure.md  execution_and_position_management.md  ib_ingestion_plan.md  ibkr_streams.md  implementation_plan.md  interactive_brokers.md  master_plan.md  modules.md  postgres_timescale.md  project_scope.md  redis_key_repository.md  reporting.md  rest_ingestion.md  risk_management.md  runtime_environment.md  setup.md  signal_generation.md  storage_plan.md  template_library.md  (+4 more)
infrastructure/: AGENTS.md
(+497 files in other folders)
