[project]
name = "quanticity-capital"
version = "0.1.0"
description = "Options trading system for Quanticity Capital"
requires-python = "~=3.11.0"
authors = [
  { name = "Michael Merrick" }
]
dependencies = [
  "aioredis>=2.0.1",
  "aiohttp>=3.9.5",
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "fastapi>=0.112.0",
  "ib-insync>=0.9.86",
  "jinja2>=3.1.4",
  "orjson>=3.10.7",
  "pydantic>=2.9.0",
  "redis>=5.0.8",
  "sqlalchemy[asyncio]>=2.0.32",
  "structlog>=24.2.0",
  "croniter>=3.0.3",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
watchdog = ["openai>=1.42.0"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
