[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quanticity-capital"
version = "0.1.0"
description = "Core library and CLI scaffolding for the Quanticity Capital data platform."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Quanticity Capital Team" }
]
dependencies = [
  "httpx==0.28.1",
  "redis==6.4.0",
  "pydantic==2.11.9",
  "python-dotenv==1.1.1",
  "structlog==25.4.0",
  "PyYAML==6.0.3"
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2"
]

[project.scripts]
quanticity-capital = "quanticity_capital.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
